# CPP-GUI-interpreter

./: .gitignore  Project1  Project1-V001  Project1-V001.cpp  Project1.cpp  V001.cpp  test
.devcontainer/: Dockerfile  devcontainer.json
API/: Dockerfile  image-build.sh
API/src/: Makefile  build.sh  client.go  go.mod  install.sh  run.sh
API/src/proto/: mathexpr.pb.go  mathexpr_grpc.pb.go
API/src/static/: main.html
doc/: Makefile.md
parser/: Dockerfile  image-build.sh
parser/src/: CMakeLists.txt  Makefile  client.cc  cmake-build.sh  example.c  server.cc  tinyexpr.c  tinyexpr.h
parser/src/my-tinyexpr/: Makefile  my-tinyexpr.cpp
qtProject/: # Code Citations.md  Makefile  main.cpp  main.moc  matplotlibcpp.h  moc_qcustomplot.cpp  patchlevel.h  pyconfig.h  pymacconfig.h  qtGUI.pro
qtProject/MyQtProject.app/Contents/: Info.plist
qtProject/MyQtProject.app/Contents/MacOS/: MyQtProject
shared/config/proto/: mathexpr.proto
shared/script/: grpc-local-installer.sh
shared/service/: docker-compose.yml
web/: main.html
